[tool.poetry]
name = "python-base-template"
version = "0.1.0"
description = "Project description"
authors = ["Raman <roman.s@p2p.org>"]
license = "MIT License"
readme = "README.md"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.11.1,<4"
requests = "^2.27.1"
prometheus-client = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"